--- a/src/resources/l10n/fr.json
+++ b/src/resources/l10n/fr.json
@@ -611,56 +611,56 @@
     "maintenanceStart": "Départ",
     "maintenancePeriod": "Période",
     
-    "categoryVan_Intervention":  "van_Intervention",
-    "categoryVan_ALI":  "van_ALI",
-    "categoryVan_ALI_Intervention":  "van_ALI_Intervention",
-    "categoryVan_ALP":  "van_ALP",
-    "categoryVan_ALP_Intervention":  "van_ALP_Intervention",
-    "categoryVan_CHA":  "van_CHA",
-    "categoryVan_CHA_Intervention":  "van_CHA_Intervention",
-    "categoryVan_DAU":  "van_DAU",
-    "categoryVan_DAU_Intervention":  "van_DAU_Intervention",
-    "categoryVan_DEL":  "van_DEL",
-    "categoryVan_DEL_Intervention":  "van_DEL_Intervention",
-    "categoryVan_GAI":  "van_GAI",
-    "categoryVan_GAI_Intervention":  "van_GAI_Intervention",
-    "categoryVan_IND":  "van_IND",
-    "categoryVan_IND_Intervention":  "van_IND_Intervention",
-    "categoryVan_QUE":  "van_QUE",
-    "categoryVan_QUE_Intervention":  "van_QUE_Intervention",
-    "categoryVan_REC":  "van_REC",
-    "categoryVan_REC_Intervention":  "van_REC_Intervention",
-    "categoryVan_ROM":  "van_ROM",
-    "categoryVan_ROM_Intervention":  "van_ROM_Intervention",
-    "categoryVan_SAN":  "van_SAN",
-    "categoryVan_SAN_Intervention":  "van_SAN_Intervention",
-    "categoryVan_SIE":  "van_SIE",
-    "categoryVan_SIE_Intervention":  "van_SIE_Intervention" ,
+    "categoryVan_Intervention":  "Van_Intervention",
+    "categoryVan_ALI":  "Van_ALI",
+    "categoryVan_ALI_Intervention":  "Van_ALI_Intervention",
+    "categoryVan_ALP":  "Van_ALP",
+    "categoryVan_ALP_Intervention":  "Van_ALP_Intervention",
+    "categoryVan_CHA":  "Van_CHA",
+    "categoryVan_CHA_Intervention":  "Van_CHA_Intervention",
+    "categoryVan_DAU":  "Van_DAU",
+    "categoryVan_DAU_Intervention":  "Van_DAU_Intervention",
+    "categoryVan_DEL":  "Van_DEL",
+    "categoryVan_DEL_Intervention":  "Van_DEL_Intervention",
+    "categoryVan_GAI":  "Van_GAI",
+    "categoryVan_GAI_Intervention":  "Van_GAI_Intervention",
+    "categoryVan_IND":  "Van_IND",
+    "categoryVan_IND_Intervention":  "Van_IND_Intervention",
+    "categoryVan_QUE":  "Van_QUE",
+    "categoryVan_QUE_Intervention":  "Van_QUE_Intervention",
+    "categoryVan_REC":  "Van_REC",
+    "categoryVan_REC_Intervention":  "Van_REC_Intervention",
+    "categoryVan_ROM":  "Van_ROM",
+    "categoryVan_ROM_Intervention":  "Van_ROM_Intervention",
+    "categoryVan_SAN":  "Van_SAN",
+    "categoryVan_SAN_Intervention":  "Van_SAN_Intervention",
+    "categoryVan_SIE":  "Van_SIE",
+    "categoryVan_SIE_Intervention":  "Van_SIE_Intervention" ,
 
-    "categoryMotorcycle_Intervention":  "moto_Intervention",
-    "categoryMotorcycle_ALI":  "moto_ALI",
-    "categoryMotorcycle_ALI_Intervention":  "moto_ALI_Intervention",
-    "categoryMotorcycle_ALP":  "moto_ALP",
-    "categoryMotorcycle_ALP_Intervention":  "moto_ALP_Intervention",
-    "categoryMotorcycle_CHA":  "moto_CHA",
-    "categoryMotorcycle_CHA_Intervention":  "moto_CHA_Intervention",
-    "categoryMotorcycle_DAU":  "moto_DAU",
-    "categoryMotorcycle_DAU_Intervention":  "moto_DAU_Intervention",
-    "categoryMotorcycle_DEL":  "moto_DEL",
-    "categoryMotorcycle_DEL_Intervention":  "moto_DEL_Intervention",
-    "categoryMotorcycle_GAI":  "moto_GAI",
-    "categoryMotorcycle_GAI_Intervention":  "moto_GAI_Intervention",
-    "categoryMotorcycle_IND":  "moto_IND",
-    "categoryMotorcycle_IND_Intervention":  "moto_IND_Intervention",
-    "categoryMotorcycle_QUE":  "moto_QUE",
-    "categoryMotorcycle_QUE_Intervention":  "moto_QUE_Intervention",
-    "categoryMotorcycle_REC":  "moto_REC",
-    "categoryMotorcycle_REC_Intervention":  "moto_REC_Intervention",
-    "categoryMotorcycle_ROM":  "moto_ROM",
-    "categoryMotorcycle_ROM_Intervention":  "moto_ROM_Intervention",
-    "categoryMotorcycle_SAN":  "moto_SAN",
-    "categoryMotorcycle_SAN_Intervention":  "moto_SAN_Intervention",
-    "categoryMotorcycle_SIE":  "moto_SIE",
-    "categoryMotorcycle_SIE_Intervention":  "moto_SIE_Intervention"
+    "categoryMotorcycle_Intervention":  "Moto_Intervention",
+    "categoryMotorcycle_ALI":  "Moto_ALI",
+    "categoryMotorcycle_ALI_Intervention":  "Moto_ALI_Intervention",
+    "categoryMotorcycle_ALP":  "Moto_ALP",
+    "categoryMotorcycle_ALP_Intervention":  "Moto_ALP_Intervention",
+    "categoryMotorcycle_CHA":  "Moto_CHA",
+    "categoryMotorcycle_CHA_Intervention":  "Moto_CHA_Intervention",
+    "categoryMotorcycle_DAU":  "Moto_DAU",
+    "categoryMotorcycle_DAU_Intervention":  "Moto_DAU_Intervention",
+    "categoryMotorcycle_DEL":  "Moto_DEL",
+    "categoryMotorcycle_DEL_Intervention":  "Moto_DEL_Intervention",
+    "categoryMotorcycle_GAI":  "Moto_GAI",
+    "categoryMotorcycle_GAI_Intervention":  "Moto_GAI_Intervention",
+    "categoryMotorcycle_IND":  "Moto_IND",
+    "categoryMotorcycle_IND_Intervention":  "Moto_IND_Intervention",
+    "categoryMotorcycle_QUE":  "Moto_QUE",
+    "categoryMotorcycle_QUE_Intervention":  "Moto_QUE_Intervention",
+    "categoryMotorcycle_REC":  "Moto_REC",
+    "categoryMotorcycle_REC_Intervention":  "Moto_REC_Intervention",
+    "categoryMotorcycle_ROM":  "Moto_ROM",
+    "categoryMotorcycle_ROM_Intervention":  "Moto_ROM_Intervention",
+    "categoryMotorcycle_SAN":  "Moto_SAN",
+    "categoryMotorcycle_SAN_Intervention":  "Moto_SAN_Intervention",
+    "categoryMotorcycle_SIE":  "Moto_SIE",
+    "categoryMotorcycle_SIE_Intervention":  "Moto_SIE_Intervention"
 
 }
